fixed alignment issues, scroll, and typing indicator style

--- a/client/assets/css/styles.css
+++ b/client/assets/css/styles.css
@@ -22,22 +22,27 @@ body {
     z-index: 1000;
 }
 
+#chat-box-container {
+    height: 400px;
+    margin: 0 auto;
+}
 #chat-box {
     height: 400px;
     max-width: 500px;
     min-width: 200px;
     background-color: #fcfcfc;
     margin: 0 auto;
-    position: relative;
     overflow-y: auto;
-    border-radius: 20px;
+    border-radius: 20px 20px 0 0;
 }
 #chat-status {
-    background-color: red;
+    background-color: #fcfcfc;
+    color: gray;
     width: 100%;
+    min-width: 200px;
+    max-width: 500px;
     height: 30px;
-    position: absolute;
-    bottom: 0px;
+    margin: 0 auto;
 }
 
 label {
@@ -68,9 +73,13 @@ form {
     margin: 0 auto;
     max-width: 500px;
     min-width: 200px;
-    padding: 0;
+    padding-top: 50px;
 }
 
+label {
+    display: block;
+    width: 50px;
+}
 #send-button {
     display: block;
     width: 70px;
@@ -99,5 +108,9 @@ form {
 
 .bubble-self {
     background-color: #d9f9fa;
-    background-image: linear-gradient(to bottom right, red, #be7aeb) !important;
+    background-image: linear-gradient(
+        to bottom right,
+        #e85a77,
+        #be7aeb
+    ) !important;
 }
